[FEATURE] Added Schedule to send finished Polls Report (#1)
* creating schedule

* added DEV_ENV sql scripts to populate db with some data before development

* added postman collection

* working DAO

* added users that voted

* removed comments

* finished